# asn1c-go

./: .gitignore  README.md  constants.go  go.mod  parser.go
Specs/: asn1.ebnf  asn1.tokens  builtin.asn1  extract_grammar.py  tool.go
TestFiles/: 001.asn1
cmd/asn1c/: main.go
compiler/: constants.go
lib/bitbuffer/: bitbuffer.go  bitbuffer_test.go  const.go
lib/builtin/: any_century_encoding.go  any_century_encoding_test.go  any_date_encoding.go  any_year_day_encoding.go  any_year_encoding.go  any_year_encoding_test.go  any_year_week_day_encoding.go  any_year_week_encoding.go  builtin_test.go  century_encoding.go  century_encoding_test.go  date_encoding.go  duration_equivalent.go  duration_interval_encoding.go  hours_and_diff_and_fraction_encoding.go  hours_and_diff_encoding.go  hours_and_fraction_encoding.go  hours_encoding.go  hours_utc_and_fraction_encoding.go  hours_utc_encoding.go  minutes_and_diff_and_fraction_encoding.go  minutes_and_diff_encoding.go  minutes_and_fraction_encoding.go  minutes_encoding.go  minutes_utc_and_fraction_encoding.go  minutes_utc_encoding.go  real_type.go  real_type_test.go  time_difference.go  time_of_day_and_diff_and_fraction_encoding.go  time_of_day_and_diff_encoding.go  time_of_day_and_fraction_encoding.go  time_of_day_encoding.go  time_of_day_utc_and_fraction_encoding.go  time_of_day_utc_encoding.go  year_day_encoding.go  year_encoding.go  year_encoding_test.go  year_month_encoding.go  year_month_encoding_test.go  (+2 more)
lib/per/: const.go  decode.go  decode_test.go  encode.go  encode_test.go  (+3 more)
lib/per/testing/rust/: Cargo.toml
(+154 files in other folders)
